[package]
name = "twitch-crawler"
version = "0.1.0"
authors = ["Maniarr <nicolas@maniarr.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13"
actix-rt = { version = "^2.8.0", default-features = false }
chrono = "*"
time = "^0.3"
warp10 = "*"
isahc = { version = "*", features = ["json"] }
twitch_api2 = { version = "0.6.1", features = ["client", "helix", "reqwest"] }
twitch_oauth2 = { version = "0.6.1", features =  ["reqwest"] }
reqwest = "0.11.4"
tera = "*"
openssl = { version = "*", features = ["vendored"] }
clap = { version = "^4", default-features = true, features = ["derive", "env"] }
